// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`imageOptimizer should return a 200 image jpeg result when no content-type is given 1`] = `
Object {
  "body": Object {
    "data": Array [
      255,
      216,
      255,
      219,
      0,
      67,
      0,
      10,
      7,
      7,
      8,
      7,
      6,
      10,
      8,
      8,
      8,
      11,
      10,
      10,
      11,
      14,
      24,
      16,
      14,
      13,
      13,
      14,
      29,
      21,
      22,
      17,
      24,
      35,
      31,
      37,
      36,
      34,
      31,
      34,
      33,
      38,
      43,
      55,
      47,
      38,
      41,
      52,
      41,
      33,
      34,
      48,
      65,
      49,
      52,
      57,
      59,
      62,
      62,
      62,
      37,
      46,
      68,
      73,
      67,
      60,
      72,
      55,
      61,
      62,
      59,
      255,
      219,
      0,
      67,
      1,
      10,
      11,
      11,
      14,
      13,
      14,
      28,
      16,
      16,
      28,
      59,
      40,
      34,
      40,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      255,
      192,
      0,
      17,
      8,
      0,
      1,
      0,
      1,
      3,
      1,
      34,
      0,
      2,
      17,
      1,
      3,
      17,
      1,
      255,
      196,
      0,
      21,
      0,
      1,
      1,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      4,
      255,
      196,
      0,
      20,
      16,
      1,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      255,
      196,
      0,
      21,
      1,
      1,
      1,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      6,
      7,
      255,
      196,
      0,
      20,
      17,
      1,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      255,
      218,
      0,
      12,
      3,
      1,
      0,
      2,
      17,
      3,
      17,
      0,
      63,
      0,
      144,
      1,
      85,
      9,
      255,
      217,
    ],
    "type": "Buffer",
  },
  "headers": Object {
    "Cache-Control": "public, max-age=3600, s-maxage=31536000",
    "Content-Type": "image/jpeg",
  },
  "status": 200,
}
`;

exports[`imageOptimizer should return a 200 image jpeg result when no content-type is given but the filetype is jpeg 1`] = `
Object {
  "body": Object {
    "data": Array [
      255,
      216,
      255,
      219,
      0,
      67,
      0,
      10,
      7,
      7,
      8,
      7,
      6,
      10,
      8,
      8,
      8,
      11,
      10,
      10,
      11,
      14,
      24,
      16,
      14,
      13,
      13,
      14,
      29,
      21,
      22,
      17,
      24,
      35,
      31,
      37,
      36,
      34,
      31,
      34,
      33,
      38,
      43,
      55,
      47,
      38,
      41,
      52,
      41,
      33,
      34,
      48,
      65,
      49,
      52,
      57,
      59,
      62,
      62,
      62,
      37,
      46,
      68,
      73,
      67,
      60,
      72,
      55,
      61,
      62,
      59,
      255,
      219,
      0,
      67,
      1,
      10,
      11,
      11,
      14,
      13,
      14,
      28,
      16,
      16,
      28,
      59,
      40,
      34,
      40,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      59,
      255,
      192,
      0,
      17,
      8,
      0,
      1,
      0,
      1,
      3,
      1,
      34,
      0,
      2,
      17,
      1,
      3,
      17,
      1,
      255,
      196,
      0,
      21,
      0,
      1,
      1,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      4,
      255,
      196,
      0,
      20,
      16,
      1,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      255,
      196,
      0,
      21,
      1,
      1,
      1,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      6,
      7,
      255,
      196,
      0,
      20,
      17,
      1,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      255,
      218,
      0,
      12,
      3,
      1,
      0,
      2,
      17,
      3,
      17,
      0,
      63,
      0,
      144,
      1,
      85,
      9,
      255,
      217,
    ],
    "type": "Buffer",
  },
  "headers": Object {
    "Cache-Control": "public, max-age=3600, s-maxage=31536000",
    "Content-Type": "image/jpeg",
  },
  "status": 200,
}
`;

exports[`imageOptimizer should return a 200 image png result when no content-type is given but the filetype is png 1`] = `
Object {
  "body": Object {
    "data": Array [
      137,
      80,
      78,
      71,
      13,
      10,
      26,
      10,
      0,
      0,
      0,
      13,
      73,
      72,
      68,
      82,
      0,
      0,
      0,
      1,
      0,
      0,
      0,
      1,
      8,
      6,
      0,
      0,
      0,
      31,
      21,
      196,
      137,
      0,
      0,
      0,
      9,
      112,
      72,
      89,
      115,
      0,
      0,
      11,
      19,
      0,
      0,
      11,
      19,
      1,
      0,
      154,
      156,
      24,
      0,
      0,
      0,
      13,
      73,
      68,
      65,
      84,
      8,
      215,
      99,
      248,
      236,
      35,
      241,
      9,
      0,
      5,
      215,
      2,
      74,
      175,
      167,
      19,
      196,
      0,
      0,
      0,
      0,
      73,
      69,
      78,
      68,
      174,
      66,
      96,
      130,
    ],
    "type": "Buffer",
  },
  "headers": Object {
    "Cache-Control": "public, max-age=3600, s-maxage=31536000",
    "Content-Type": "image/png",
  },
  "status": 200,
}
`;

exports[`imageOptimizer should return a 200 image unknown result when no content-type is given but the filetype is unknown 1`] = `
Object {
  "body": Object {
    "data": Array [
      137,
      80,
      78,
      71,
      13,
      10,
      26,
      10,
      0,
      0,
      0,
      13,
      73,
      72,
      68,
      82,
      0,
      0,
      0,
      1,
      0,
      0,
      0,
      1,
      8,
      6,
      0,
      0,
      0,
      31,
      21,
      196,
      137,
      0,
      0,
      0,
      9,
      112,
      72,
      89,
      115,
      0,
      0,
      11,
      19,
      0,
      0,
      11,
      19,
      1,
      0,
      154,
      156,
      24,
      0,
      0,
      0,
      13,
      73,
      68,
      65,
      84,
      8,
      215,
      99,
      248,
      236,
      35,
      241,
      9,
      0,
      5,
      215,
      2,
      74,
      175,
      167,
      19,
      196,
      0,
      0,
      0,
      0,
      73,
      69,
      78,
      68,
      174,
      66,
      96,
      130,
    ],
    "type": "Buffer",
  },
  "headers": Object {
    "Cache-Control": "public, max-age=3600, s-maxage=31536000",
    "Content-Type": "image/unknown",
  },
  "status": 200,
}
`;

exports[`imageOptimizer should return a 200 image webp result when no content-type is given but the filetype is webp 1`] = `
Object {
  "body": Object {
    "data": Array [
      82,
      73,
      70,
      70,
      88,
      0,
      0,
      0,
      87,
      69,
      66,
      80,
      86,
      80,
      56,
      88,
      10,
      0,
      0,
      0,
      16,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      65,
      76,
      80,
      72,
      2,
      0,
      0,
      0,
      0,
      242,
      86,
      80,
      56,
      32,
      48,
      0,
      0,
      0,
      240,
      1,
      0,
      157,
      1,
      42,
      1,
      0,
      1,
      0,
      2,
      64,
      56,
      37,
      160,
      2,
      116,
      186,
      1,
      248,
      0,
      4,
      200,
      0,
      0,
      254,
      208,
      202,
      255,
      205,
      129,
      92,
      215,
      62,
      255,
      127,
      251,
      75,
      63,
      74,
      199,
      210,
      177,
      252,
      42,
      0,
      0,
      0,
    ],
    "type": "Buffer",
  },
  "headers": Object {
    "Cache-Control": "public, max-age=3600, s-maxage=31536000",
    "Content-Type": "image/webp",
  },
  "status": 200,
}
`;

exports[`imageOptimizer should return a 200 image webp result when the request contains an accept header 1`] = `
Object {
  "body": Object {
    "data": Array [
      82,
      73,
      70,
      70,
      88,
      0,
      0,
      0,
      87,
      69,
      66,
      80,
      86,
      80,
      56,
      88,
      10,
      0,
      0,
      0,
      16,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      65,
      76,
      80,
      72,
      2,
      0,
      0,
      0,
      0,
      242,
      86,
      80,
      56,
      32,
      48,
      0,
      0,
      0,
      240,
      1,
      0,
      157,
      1,
      42,
      1,
      0,
      1,
      0,
      2,
      64,
      56,
      37,
      160,
      2,
      116,
      186,
      1,
      248,
      0,
      4,
      200,
      0,
      0,
      254,
      208,
      202,
      255,
      205,
      129,
      92,
      215,
      62,
      255,
      127,
      251,
      75,
      63,
      74,
      199,
      210,
      177,
      252,
      42,
      0,
      0,
      0,
    ],
    "type": "Buffer",
  },
  "headers": Object {
    "Cache-Control": "public, max-age=3600, s-maxage=31536000",
    "Content-Type": "image/webp",
  },
  "status": 200,
}
`;
